[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cogforge-engine" 
version = "1.0.5"
authors = [
  { name="Avik Majumder", email="avikmjd2@gmail.com" },
]
description = "A custom autograd engine and Transformer block built from scratch."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20.0",
    "numexpr>=2.8.0",
]

[project.optional-dependencies]
cuda = [
    "cupy>=12.0.0", # Optional dependency
]

[project.urls]
Homepage = "https://github.com/avikmjd2/cogforge"

[tool.hatch.build.targets.wheel]
packages = ["cogforge"]